// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SegmentsSection UI display SegmentsSection with trips and visited places should render list of trips and map when no trip selected 1`] = `
<div>
  <section
    class="survey-section survey-section-shortname-testShortname"
  >
    <div
      class="survey-section__content"
    >
      <div>
        Widget 
        activePersonTitle
      </div>
      <div>
        Widget 
        buttonSwitchPerson
      </div>
      <div
        class="survey-trips-list-and-map-container"
      >
        <ul
          class="survey-trips-list "
        >
          <li
            class="no-bullet"
          >
            <div>
              Widget 
              personTripsTitle
            </div>
          </li>
          <li
            class="no-bullet survey-trip-item survey-trip-item-name"
          >
            <span
              class="survey-trip-item-element survey-trip-item-sequence-and-icon"
            >
              <em>
                trip.tripSeq
              </em>
            </span>
            <span
              class="survey-trip-item-element survey-trip-item-buttons"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-clock"
                data-icon="clock"
                data-prefix="fas"
                role="img"
                style="margin-right: 0.3rem; margin-left: 0.6rem;"
                viewBox="0 0 512 512"
              >
                <path
                  d="M256 0a256 256 0 1 1 0 512 256 256 0 1 1 0-512zM232 120l0 136c0 8 4 15.5 10.7 20l96 64c11 7.4 25.9 4.4 33.3-6.7s4.4-25.9-6.7-33.3L280 243.2 280 120c0-13.3-10.7-24-24-24s-24 10.7-24 24z"
                  fill="currentColor"
                />
              </svg>
              timeStr
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-arrow-right"
                data-icon="arrow-right"
                data-prefix="fas"
                role="img"
                style="margin-right: 0.3rem; margin-left: 0.3rem;"
                viewBox="0 0 512 512"
              >
                <path
                  d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-105.4 105.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
                  fill="currentColor"
                />
              </svg>
              timeStr
              <button
                class="survey-section__button button blue small"
                style="margin-left: 0.5rem;"
                title="trip.editTrip"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-pencil"
                  data-icon="pencil"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 512 512"
                >
                  <path
                    d="M36.4 353.2c4.1-14.6 11.8-27.9 22.6-38.7l181.2-181.2 33.9-33.9c16.6 16.6 51.3 51.3 104 104l33.9 33.9-33.9 33.9-181.2 181.2c-10.7 10.7-24.1 18.5-38.7 22.6L30.4 510.6c-8.3 2.3-17.3 0-23.4-6.2S-1.4 489.3 .9 481L36.4 353.2zm55.6-3.7c-4.4 4.7-7.6 10.4-9.3 16.6l-24.1 86.9 86.9-24.1c6.4-1.8 12.2-5.1 17-9.7L91.9 349.5zm354-146.1c-16.6-16.6-51.3-51.3-104-104L308 65.5C334.5 39 349.4 24.1 352.9 20.6 366.4 7 384.8-.6 404-.6S441.6 7 455.1 20.6l35.7 35.7C504.4 69.9 512 88.3 512 107.4s-7.6 37.6-21.2 51.1c-3.5 3.5-18.4 18.4-44.9 44.9z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </span>
          </li>
          <li
            class="no-bullet survey-trip-item survey-trip-item-description"
          >
            <span
              class="survey-trip-item-element survey-trip-item-origin-description"
            >
              <img
                alt="visitedPlaces/activities/activity1"
                src="/dist/icons/activities/other/question_mark-marker_round.svg"
                style="height: 4rem;"
              />
              <span>
                visitedPlace.activities.activity1
                <br />
                <em>
                   • 
                  Lieu 1
                </em>
              </span>
            </span>
            <span
              class="survey-trip-item-element survey-trip-item-arrow"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-arrow-right"
                data-icon="arrow-right"
                data-prefix="fas"
                role="img"
                style="margin-right: 0.3rem; margin-left: 0.3rem;"
                viewBox="0 0 512 512"
              >
                <path
                  d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-105.4 105.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <span
              class="survey-trip-item-element survey-trip-item-destination-description"
            >
              <img
                alt="visitedPlaces/activities/activity2"
                src="/dist/icons/activities/other/question_mark-marker_round.svg"
                style="height: 4rem;"
              />
              <span>
                visitedPlace.activities.activity2
              </span>
            </span>
          </li>
          <li
            class="no-bullet survey-trip-item survey-trip-item-mode-icons"
          >
            <img
              alt="mode.short.walk"
              src="/dist/images/modes_icons/walk.png"
              style="height: 1.5em; margin-left: 0.3em;"
            />
          </li>
          <li
            class="no-bullet survey-trip-item survey-trip-item-name"
          >
            <span
              class="survey-trip-item-element survey-trip-item-sequence-and-icon"
            >
              <em>
                trip.tripSeq
              </em>
            </span>
            <span
              class="survey-trip-item-element survey-trip-item-buttons"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-clock"
                data-icon="clock"
                data-prefix="fas"
                role="img"
                style="margin-right: 0.3rem; margin-left: 0.6rem;"
                viewBox="0 0 512 512"
              >
                <path
                  d="M256 0a256 256 0 1 1 0 512 256 256 0 1 1 0-512zM232 120l0 136c0 8 4 15.5 10.7 20l96 64c11 7.4 25.9 4.4 33.3-6.7s4.4-25.9-6.7-33.3L280 243.2 280 120c0-13.3-10.7-24-24-24s-24 10.7-24 24z"
                  fill="currentColor"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-arrow-right"
                data-icon="arrow-right"
                data-prefix="fas"
                role="img"
                style="margin-right: 0.3rem; margin-left: 0.3rem;"
                viewBox="0 0 512 512"
              >
                <path
                  d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-105.4 105.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
                  fill="currentColor"
                />
              </svg>
              timeStr
              <button
                class="survey-section__button button blue small"
                style="margin-left: 0.5rem;"
                title="trip.editTrip"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-pencil"
                  data-icon="pencil"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 512 512"
                >
                  <path
                    d="M36.4 353.2c4.1-14.6 11.8-27.9 22.6-38.7l181.2-181.2 33.9-33.9c16.6 16.6 51.3 51.3 104 104l33.9 33.9-33.9 33.9-181.2 181.2c-10.7 10.7-24.1 18.5-38.7 22.6L30.4 510.6c-8.3 2.3-17.3 0-23.4-6.2S-1.4 489.3 .9 481L36.4 353.2zm55.6-3.7c-4.4 4.7-7.6 10.4-9.3 16.6l-24.1 86.9 86.9-24.1c6.4-1.8 12.2-5.1 17-9.7L91.9 349.5zm354-146.1c-16.6-16.6-51.3-51.3-104-104L308 65.5C334.5 39 349.4 24.1 352.9 20.6 366.4 7 384.8-.6 404-.6S441.6 7 455.1 20.6l35.7 35.7C504.4 69.9 512 88.3 512 107.4s-7.6 37.6-21.2 51.1c-3.5 3.5-18.4 18.4-44.9 44.9z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </span>
          </li>
          <li
            class="no-bullet survey-trip-item survey-trip-item-description"
          >
            <span
              class="survey-trip-item-element survey-trip-item-origin-description"
            >
              <img
                alt="visitedPlaces/activities/activity2"
                src="/dist/icons/activities/other/question_mark-marker_round.svg"
                style="height: 4rem;"
              />
              <span>
                visitedPlace.activities.activity2
              </span>
            </span>
            <span
              class="survey-trip-item-element survey-trip-item-arrow"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-arrow-right"
                data-icon="arrow-right"
                data-prefix="fas"
                role="img"
                style="margin-right: 0.3rem; margin-left: 0.3rem;"
                viewBox="0 0 512 512"
              >
                <path
                  d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-105.4 105.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <span
              class="survey-trip-item-element survey-trip-item-destination-description"
            >
              <img
                alt="visitedPlaces/activities/activity3"
                src="/dist/icons/activities/other/question_mark-marker_round.svg"
                style="height: 4rem;"
              />
              <span>
                visitedPlace.activities.activity3
              </span>
            </span>
          </li>
          <li
            class="no-bullet survey-trip-item survey-trip-item-mode-icons"
          />
          <li
            class="no-bullet"
          >
            <div>
              Widget 
              buttonConfirmNextSection
            </div>
          </li>
        </ul>
        <div
          class="survey-trips-map"
        >
          <div>
            Widget 
            personVisitedPlacesMap
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`SegmentsSection UI display SegmentsSection with trips and visited places should render list of trips when loop activity in one trip, no trip selected 1`] = `
<div>
  <section
    class="survey-section survey-section-shortname-testShortname"
  >
    <div
      class="survey-section__content"
    >
      <div>
        Widget 
        activePersonTitle
      </div>
      <div>
        Widget 
        buttonSwitchPerson
      </div>
      <div
        class="survey-trips-list-and-map-container"
      >
        <ul
          class="survey-trips-list "
        >
          <li
            class="no-bullet"
          >
            <div>
              Widget 
              personTripsTitle
            </div>
          </li>
          <li
            class="no-bullet survey-trip-item survey-trip-item-name"
          >
            <span
              class="survey-trip-item-element survey-trip-item-sequence-and-icon"
            >
              <em>
                trip.tripSeq
              </em>
            </span>
            <span
              class="survey-trip-item-element survey-trip-item-buttons"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-clock"
                data-icon="clock"
                data-prefix="fas"
                role="img"
                style="margin-right: 0.3rem; margin-left: 0.6rem;"
                viewBox="0 0 512 512"
              >
                <path
                  d="M256 0a256 256 0 1 1 0 512 256 256 0 1 1 0-512zM232 120l0 136c0 8 4 15.5 10.7 20l96 64c11 7.4 25.9 4.4 33.3-6.7s4.4-25.9-6.7-33.3L280 243.2 280 120c0-13.3-10.7-24-24-24s-24 10.7-24 24z"
                  fill="currentColor"
                />
              </svg>
              timeStr
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-arrow-right"
                data-icon="arrow-right"
                data-prefix="fas"
                role="img"
                style="margin-right: 0.3rem; margin-left: 0.3rem;"
                viewBox="0 0 512 512"
              >
                <path
                  d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-105.4 105.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
                  fill="currentColor"
                />
              </svg>
              timeStr
              <button
                class="survey-section__button button blue small"
                style="margin-left: 0.5rem;"
                title="trip.editTrip"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-pencil"
                  data-icon="pencil"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 512 512"
                >
                  <path
                    d="M36.4 353.2c4.1-14.6 11.8-27.9 22.6-38.7l181.2-181.2 33.9-33.9c16.6 16.6 51.3 51.3 104 104l33.9 33.9-33.9 33.9-181.2 181.2c-10.7 10.7-24.1 18.5-38.7 22.6L30.4 510.6c-8.3 2.3-17.3 0-23.4-6.2S-1.4 489.3 .9 481L36.4 353.2zm55.6-3.7c-4.4 4.7-7.6 10.4-9.3 16.6l-24.1 86.9 86.9-24.1c6.4-1.8 12.2-5.1 17-9.7L91.9 349.5zm354-146.1c-16.6-16.6-51.3-51.3-104-104L308 65.5C334.5 39 349.4 24.1 352.9 20.6 366.4 7 384.8-.6 404-.6S441.6 7 455.1 20.6l35.7 35.7C504.4 69.9 512 88.3 512 107.4s-7.6 37.6-21.2 51.1c-3.5 3.5-18.4 18.4-44.9 44.9z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </span>
          </li>
          <li
            class="no-bullet survey-trip-item survey-trip-item-description"
          >
            <span
              class="survey-trip-item-element survey-trip-item-origin-description"
            >
              <img
                alt="visitedPlaces/activities/activity1"
                src="/dist/icons/activities/other/question_mark-marker_round.svg"
                style="height: 4rem;"
              />
              <span>
                visitedPlace.activities.activity1
                <br />
                <em>
                   • 
                  Lieu 1
                </em>
              </span>
            </span>
            <span
              class="survey-trip-item-element survey-trip-item-arrow"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-arrow-right"
                data-icon="arrow-right"
                data-prefix="fas"
                role="img"
                style="margin-right: 0.3rem; margin-left: 0.3rem;"
                viewBox="0 0 512 512"
              >
                <path
                  d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-105.4 105.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <span
              class="survey-trip-item-element survey-trip-item-destination-description"
            >
              <img
                alt="visitedPlaces/activities/workOnTheRoad"
                src="/dist/icons/activities/work/truck-marker_round.svg"
                style="height: 4rem;"
              />
              <span>
                visitedPlace.activities.workOnTheRoad
              </span>
            </span>
            <span
              class="survey-trip-item-element survey-trip-item-arrow"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-arrow-right"
                data-icon="arrow-right"
                data-prefix="fas"
                role="img"
                style="margin-right: 0.3rem; margin-left: 0.3rem;"
                viewBox="0 0 512 512"
              >
                <path
                  d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-105.4 105.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <span
              class="survey-trip-item-element survey-trip-item-destination-description"
            >
              <img
                alt="visitedPlaces/activities/activity3"
                src="/dist/icons/activities/other/question_mark-marker_round.svg"
                style="height: 4rem;"
              />
              <span>
                visitedPlace.activities.activity3
              </span>
            </span>
          </li>
          <li
            class="no-bullet survey-trip-item survey-trip-item-mode-icons"
          >
            <img
              alt="mode.short.walk"
              src="/dist/images/modes_icons/walk.png"
              style="height: 1.5em; margin-left: 0.3em;"
            />
          </li>
          <li
            class="no-bullet"
          >
            <div>
              Widget 
              buttonConfirmNextSection
            </div>
          </li>
        </ul>
        <div
          class="survey-trips-map"
        >
          <div>
            Widget 
            personVisitedPlacesMap
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`SegmentsSection UI display SegmentsSection with trips and visited places should render list of trips when loop activity is the first visited place, no trip selected 1`] = `
<div>
  <section
    class="survey-section survey-section-shortname-testShortname"
  >
    <div
      class="survey-section__content"
    >
      <div>
        Widget 
        activePersonTitle
      </div>
      <div>
        Widget 
        buttonSwitchPerson
      </div>
      <div
        class="survey-trips-list-and-map-container"
      >
        <ul
          class="survey-trips-list "
        >
          <li
            class="no-bullet"
          >
            <div>
              Widget 
              personTripsTitle
            </div>
          </li>
          <li
            class="no-bullet survey-trip-item survey-trip-item-name"
          >
            <span
              class="survey-trip-item-element survey-trip-item-sequence-and-icon"
            >
              <em>
                trip.tripSeq
              </em>
            </span>
            <span
              class="survey-trip-item-element survey-trip-item-buttons"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-clock"
                data-icon="clock"
                data-prefix="fas"
                role="img"
                style="margin-right: 0.3rem; margin-left: 0.6rem;"
                viewBox="0 0 512 512"
              >
                <path
                  d="M256 0a256 256 0 1 1 0 512 256 256 0 1 1 0-512zM232 120l0 136c0 8 4 15.5 10.7 20l96 64c11 7.4 25.9 4.4 33.3-6.7s4.4-25.9-6.7-33.3L280 243.2 280 120c0-13.3-10.7-24-24-24s-24 10.7-24 24z"
                  fill="currentColor"
                />
              </svg>
              timeStr
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-arrow-right"
                data-icon="arrow-right"
                data-prefix="fas"
                role="img"
                style="margin-right: 0.3rem; margin-left: 0.3rem;"
                viewBox="0 0 512 512"
              >
                <path
                  d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-105.4 105.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
                  fill="currentColor"
                />
              </svg>
              timeStr
              <button
                class="survey-section__button button blue small"
                style="margin-left: 0.5rem;"
                title="trip.editTrip"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-pencil"
                  data-icon="pencil"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 512 512"
                >
                  <path
                    d="M36.4 353.2c4.1-14.6 11.8-27.9 22.6-38.7l181.2-181.2 33.9-33.9c16.6 16.6 51.3 51.3 104 104l33.9 33.9-33.9 33.9-181.2 181.2c-10.7 10.7-24.1 18.5-38.7 22.6L30.4 510.6c-8.3 2.3-17.3 0-23.4-6.2S-1.4 489.3 .9 481L36.4 353.2zm55.6-3.7c-4.4 4.7-7.6 10.4-9.3 16.6l-24.1 86.9 86.9-24.1c6.4-1.8 12.2-5.1 17-9.7L91.9 349.5zm354-146.1c-16.6-16.6-51.3-51.3-104-104L308 65.5C334.5 39 349.4 24.1 352.9 20.6 366.4 7 384.8-.6 404-.6S441.6 7 455.1 20.6l35.7 35.7C504.4 69.9 512 88.3 512 107.4s-7.6 37.6-21.2 51.1c-3.5 3.5-18.4 18.4-44.9 44.9z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </span>
          </li>
          <li
            class="no-bullet survey-trip-item survey-trip-item-description"
          >
            <span
              class="survey-trip-item-element survey-trip-item-origin-description"
            >
              <img
                alt="visitedPlaces/activities/workOnTheRoad"
                src="/dist/icons/activities/work/truck-marker_round.svg"
                style="height: 4rem;"
              />
              <span>
                visitedPlace.activities.workOnTheRoad
                <br />
                <em>
                   • 
                  Lieu 1
                </em>
              </span>
            </span>
            <span
              class="survey-trip-item-element survey-trip-item-arrow"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-arrow-right"
                data-icon="arrow-right"
                data-prefix="fas"
                role="img"
                style="margin-right: 0.3rem; margin-left: 0.3rem;"
                viewBox="0 0 512 512"
              >
                <path
                  d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-105.4 105.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <span
              class="survey-trip-item-element survey-trip-item-destination-description"
            >
              <img
                alt="visitedPlaces/activities/activity2"
                src="/dist/icons/activities/other/question_mark-marker_round.svg"
                style="height: 4rem;"
              />
              <span>
                visitedPlace.activities.activity2
              </span>
            </span>
          </li>
          <li
            class="no-bullet survey-trip-item survey-trip-item-mode-icons"
          >
            <img
              alt="mode.short.walk"
              src="/dist/images/modes_icons/walk.png"
              style="height: 1.5em; margin-left: 0.3em;"
            />
          </li>
          <li
            class="no-bullet survey-trip-item survey-trip-item-name"
          >
            <span
              class="survey-trip-item-element survey-trip-item-sequence-and-icon"
            >
              <em>
                trip.tripSeq
              </em>
            </span>
            <span
              class="survey-trip-item-element survey-trip-item-buttons"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-clock"
                data-icon="clock"
                data-prefix="fas"
                role="img"
                style="margin-right: 0.3rem; margin-left: 0.6rem;"
                viewBox="0 0 512 512"
              >
                <path
                  d="M256 0a256 256 0 1 1 0 512 256 256 0 1 1 0-512zM232 120l0 136c0 8 4 15.5 10.7 20l96 64c11 7.4 25.9 4.4 33.3-6.7s4.4-25.9-6.7-33.3L280 243.2 280 120c0-13.3-10.7-24-24-24s-24 10.7-24 24z"
                  fill="currentColor"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-arrow-right"
                data-icon="arrow-right"
                data-prefix="fas"
                role="img"
                style="margin-right: 0.3rem; margin-left: 0.3rem;"
                viewBox="0 0 512 512"
              >
                <path
                  d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-105.4 105.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
                  fill="currentColor"
                />
              </svg>
              timeStr
              <button
                class="survey-section__button button blue small"
                style="margin-left: 0.5rem;"
                title="trip.editTrip"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-pencil"
                  data-icon="pencil"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 512 512"
                >
                  <path
                    d="M36.4 353.2c4.1-14.6 11.8-27.9 22.6-38.7l181.2-181.2 33.9-33.9c16.6 16.6 51.3 51.3 104 104l33.9 33.9-33.9 33.9-181.2 181.2c-10.7 10.7-24.1 18.5-38.7 22.6L30.4 510.6c-8.3 2.3-17.3 0-23.4-6.2S-1.4 489.3 .9 481L36.4 353.2zm55.6-3.7c-4.4 4.7-7.6 10.4-9.3 16.6l-24.1 86.9 86.9-24.1c6.4-1.8 12.2-5.1 17-9.7L91.9 349.5zm354-146.1c-16.6-16.6-51.3-51.3-104-104L308 65.5C334.5 39 349.4 24.1 352.9 20.6 366.4 7 384.8-.6 404-.6S441.6 7 455.1 20.6l35.7 35.7C504.4 69.9 512 88.3 512 107.4s-7.6 37.6-21.2 51.1c-3.5 3.5-18.4 18.4-44.9 44.9z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </span>
          </li>
          <li
            class="no-bullet survey-trip-item survey-trip-item-description"
          >
            <span
              class="survey-trip-item-element survey-trip-item-origin-description"
            >
              <img
                alt="visitedPlaces/activities/activity2"
                src="/dist/icons/activities/other/question_mark-marker_round.svg"
                style="height: 4rem;"
              />
              <span>
                visitedPlace.activities.activity2
              </span>
            </span>
            <span
              class="survey-trip-item-element survey-trip-item-arrow"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-arrow-right"
                data-icon="arrow-right"
                data-prefix="fas"
                role="img"
                style="margin-right: 0.3rem; margin-left: 0.3rem;"
                viewBox="0 0 512 512"
              >
                <path
                  d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-105.4 105.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <span
              class="survey-trip-item-element survey-trip-item-destination-description"
            >
              <img
                alt="visitedPlaces/activities/activity3"
                src="/dist/icons/activities/other/question_mark-marker_round.svg"
                style="height: 4rem;"
              />
              <span>
                visitedPlace.activities.activity3
              </span>
            </span>
          </li>
          <li
            class="no-bullet survey-trip-item survey-trip-item-mode-icons"
          />
          <li
            class="no-bullet"
          >
            <div>
              Widget 
              buttonConfirmNextSection
            </div>
          </li>
        </ul>
        <div
          class="survey-trips-map"
        >
          <div>
            Widget 
            personVisitedPlacesMap
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`SegmentsSection UI display SegmentsSection with trips and visited places should render list of trips with selected trip widget when trip selected 1`] = `
<div>
  <section
    class="survey-section survey-section-shortname-testShortname"
  >
    <div
      class="survey-section__content"
    >
      <div>
        Widget 
        activePersonTitle
      </div>
      <div>
        Widget 
        buttonSwitchPerson
      </div>
      <div
        class="survey-trips-list-and-map-container"
      >
        <ul
          class="survey-trips-list full-width"
        >
          <li
            class="no-bullet"
          >
            <div>
              Widget 
              personTripsTitle
            </div>
          </li>
          <li
            class="no-bullet survey-trip-item survey-trip-item-name survey-trip-item-selected"
          >
            <span
              class="survey-trip-item-element survey-trip-item-sequence-and-icon"
            >
              <em>
                trip.tripSeq
              </em>
            </span>
            <span
              class="survey-trip-item-element survey-trip-item-buttons"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-clock"
                data-icon="clock"
                data-prefix="fas"
                role="img"
                style="margin-right: 0.3rem; margin-left: 0.6rem;"
                viewBox="0 0 512 512"
              >
                <path
                  d="M256 0a256 256 0 1 1 0 512 256 256 0 1 1 0-512zM232 120l0 136c0 8 4 15.5 10.7 20l96 64c11 7.4 25.9 4.4 33.3-6.7s4.4-25.9-6.7-33.3L280 243.2 280 120c0-13.3-10.7-24-24-24s-24 10.7-24 24z"
                  fill="currentColor"
                />
              </svg>
              timeStr
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-arrow-right"
                data-icon="arrow-right"
                data-prefix="fas"
                role="img"
                style="margin-right: 0.3rem; margin-left: 0.3rem;"
                viewBox="0 0 512 512"
              >
                <path
                  d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-105.4 105.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
                  fill="currentColor"
                />
              </svg>
              timeStr
            </span>
          </li>
          <li
            class="no-bullet survey-trip-item survey-trip-item-description survey-trip-item-selected"
          >
            <span
              class="survey-trip-item-element survey-trip-item-origin-description"
            >
              <img
                alt="visitedPlaces/activities/activity1"
                src="/dist/icons/activities/other/question_mark-marker_round.svg"
                style="height: 4rem;"
              />
              <span>
                visitedPlace.activities.activity1
                <br />
                <em>
                   • 
                  Lieu 1
                </em>
              </span>
            </span>
            <span
              class="survey-trip-item-element survey-trip-item-arrow"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-arrow-right"
                data-icon="arrow-right"
                data-prefix="fas"
                role="img"
                style="margin-right: 0.3rem; margin-left: 0.3rem;"
                viewBox="0 0 512 512"
              >
                <path
                  d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-105.4 105.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <span
              class="survey-trip-item-element survey-trip-item-destination-description"
            >
              <img
                alt="visitedPlaces/activities/activity2"
                src="/dist/icons/activities/other/question_mark-marker_round.svg"
                style="height: 4rem;"
              />
              <span>
                visitedPlace.activities.activity2
              </span>
            </span>
          </li>
          <li
            class="no-bullet survey-trip-item survey-trip-item-mode-icons survey-trip-item-selected"
          >
            <img
              alt="mode.short.walk"
              src="/dist/images/modes_icons/walk.png"
              style="height: 1.5em; margin-left: 0.3em;"
            />
          </li>
          <li
            class="no-bullet"
            style="margin-top: -0.4rem;"
          >
            <div>
              GroupedObject
            </div>
          </li>
          <li
            class="no-bullet survey-trip-item survey-trip-item-name"
          >
            <span
              class="survey-trip-item-element survey-trip-item-sequence-and-icon"
            >
              <em>
                trip.tripSeq
              </em>
            </span>
            <span
              class="survey-trip-item-element survey-trip-item-buttons"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-clock"
                data-icon="clock"
                data-prefix="fas"
                role="img"
                style="margin-right: 0.3rem; margin-left: 0.6rem;"
                viewBox="0 0 512 512"
              >
                <path
                  d="M256 0a256 256 0 1 1 0 512 256 256 0 1 1 0-512zM232 120l0 136c0 8 4 15.5 10.7 20l96 64c11 7.4 25.9 4.4 33.3-6.7s4.4-25.9-6.7-33.3L280 243.2 280 120c0-13.3-10.7-24-24-24s-24 10.7-24 24z"
                  fill="currentColor"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-arrow-right"
                data-icon="arrow-right"
                data-prefix="fas"
                role="img"
                style="margin-right: 0.3rem; margin-left: 0.3rem;"
                viewBox="0 0 512 512"
              >
                <path
                  d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-105.4 105.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
                  fill="currentColor"
                />
              </svg>
              timeStr
            </span>
          </li>
          <li
            class="no-bullet survey-trip-item survey-trip-item-description"
          >
            <span
              class="survey-trip-item-element survey-trip-item-origin-description"
            >
              <img
                alt="visitedPlaces/activities/activity2"
                src="/dist/icons/activities/other/question_mark-marker_round.svg"
                style="height: 4rem;"
              />
              <span>
                visitedPlace.activities.activity2
              </span>
            </span>
            <span
              class="survey-trip-item-element survey-trip-item-arrow"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-arrow-right"
                data-icon="arrow-right"
                data-prefix="fas"
                role="img"
                style="margin-right: 0.3rem; margin-left: 0.3rem;"
                viewBox="0 0 512 512"
              >
                <path
                  d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-105.4 105.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <span
              class="survey-trip-item-element survey-trip-item-destination-description"
            >
              <img
                alt="visitedPlaces/activities/activity3"
                src="/dist/icons/activities/other/question_mark-marker_round.svg"
                style="height: 4rem;"
              />
              <span>
                visitedPlace.activities.activity3
              </span>
            </span>
          </li>
          <li
            class="no-bullet survey-trip-item survey-trip-item-mode-icons"
          />
          <li
            class="no-bullet"
          />
        </ul>
      </div>
    </div>
  </section>
</div>
`;

exports[`SegmentsSection UI display should render LoadingPage when not preloaded 1`] = `
<div>
  <div>
    Loading...
  </div>
</div>
`;
